turtleart.diskfour.DiskFour.scala.error
Erreur de compilation :
DiskFour:2: error: Unit does not take parameters
  disquefourth()
              ^DiskFour:4: error: Unit does not take parameters
  disquefourth()
              ^DiskFour:6: error: Unit does not take parameters
  disquefourth()
              ^DiskFour:8: error: Unit does not take parameters
  disquefourth()
              ^