turtleart.diskfour.DiskFour.scala.code
override def run() {
  disquefourth()
  setCouleur(Color.red)
  disquefourth()
  setCouleur(Color.yellow)
  disquefourth()
  setCouleur(Color.pink)
  disquefourth()
}

def disquefourth{
  for (i <- 1 to 90){
   avance(100); recule(100); right(1)
 }
}